team update - MyMicroinvest

--- a/team-board.html
+++ b/team-board.html
@@ -94,7 +94,7 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/bruno.jpg' itemprop='image' width='189' height='189' alt='Bruno de Radzitzky'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of Asset Management.</p>
+        <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined Inventures on January 1st 2017 as Head of Asset Management.</p>
         <p>He served as a director of several Etex companies in Belgium, Luxembourg, France and Spain. He also was a board member and the Compliance Officer of the Etex Pension Fund.</p>
         <p>Bruno holds a Master’s Degree in Laws (Louvain-LN), a post degree in International and European Laws (VUB) and a LLM (Queen Mary & Westfield College).</p>
       </div>
@@ -120,7 +120,7 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/philippine.jpg' itemprop='image' width='189' height='189'  alt='Philippine du Parc Locmaria'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>Philippine joined MyMicroInvest in 2016 as an Investment Analyst after completing two internships; as a Junior Investment Analyst at GBL in Brussels and in Mergers and Acquisitions at HSBC in Paris. After different work experiences in a Belgian SMO, Philippine decided to go into the exciting world of entrepreneurship.</p>
+        <p>Philippine joined Inventures in 2016 as an Investment Analyst after completing two internships; as a Junior Investment Analyst at GBL in Brussels and in Mergers and Acquisitions at HSBC in Paris. After different work experiences in a Belgian SMO, Philippine decided to go into the exciting world of entrepreneurship.</p>
         <p>Philippine studied in Belgium and China. She post-graduated Magna Cum Laude from Business Engineering at Louvain School of Management (Finance and Management major).</p>
       </div>
     </div>
@@ -131,7 +131,7 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/peter.jpg' itemprop='image' width='189' height='189'  alt='Peter De Decker'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined MyMicroInvest in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
+        <p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined Inventures in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
         Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU Leuven, with an international experience in Siena (Italy) as an exchange student.</p>
         <p>Peter passed all three <abbr title='Chartered Financial Analyst'>CFA</abbr> exams.</p>
       </div>
@@ -145,7 +145,7 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/brice.jpg' itemprop='image' width='189' height='189'  alt='Brice Moureau'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>After working as a management consultant in the Energy sector for one year, Brice joined MyMicroInvest in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
+        <p>After working as a management consultant in the Energy sector for one year, Brice joined Inventures in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
         <p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech <abbr title='Venture Capital'>VC</abbr> fund.</p>
       </div>
     </div>
@@ -156,7 +156,7 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/sarah.jpg' itemprop='image' width='189' height='189'  alt='Sarah Kawa'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined MyMicroInvest in March 2015.</p>
+        <p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined Inventures in March 2015.</p>
         <p>She holds a Bachelor Degree in law from the Saint-Louis University and a Master’s Degree in economic law from the Université Libre de Bruxelles, with international experiences in Rome and Tel-Aviv. She always had a great interest in both entrepreneurial and financial world.</p>
       </div>
     </div>
