--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
   <div class='col sm-col-7 mt3'>
     <h3>What is Inventures</h3>
 
-    <p>Inventures is a European venture capital fund that builds a better world through a portfolio of investments in sustainable businesses.</p>
+    <p>Inventures is a European venture capital fund that builds a better world  by investing in fast growing companies and sustainable businesses led by ambitious and visionary founders.</p>
 
     <p>The firm has two funds: <a href='venture-capital-funds/inventures-i/'>Inventures I</a> & <a href='venture-capital-funds/inventures-ii/'>Inventures II</a>.</p>
 
@@ -40,11 +40,11 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
     <div class='col sm-col-6 px2'>
       <p>Inventures is open to invest in European impact businesses: larger amounts in confirmed scale-ups (50%), and smaller amounts in a number of start-ups (20%) with reinvestment in follow-up rounds (30%).</p>
 
-      <p>Inventures II always requests a seat in the board of directors of each business in its portfolio.</p>
+      <p>Inventures II always requests a seat on the board of directors of each business in its portfolio.</p>
     </div>
 
     <div class='col sm-col-6 px2 mb3'>
-      <p>Both Inventures I & II empower citizens and help to democratise venture capital by offering co-investment on some campaigns the investment platform, MyMicroInvest.</p>
+      <p>Both Inventures I & II empower citizens and help to democratise venture capital by offering co-investment for selected campaigns featured on the investment platform, MyMicroInvest.</p>
 
       <p>Including citizens in a multi-stakeholder partnership reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values.</p>
     </div>
@@ -66,7 +66,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
         <img src='/assets/inventures2.svg' width='250' alt='Inventures II'/>
       </div>
 
-      <p>Inventures II SDG Growth is a venture capital fund currently accepting new investment. The fund has raised €15 Million so far, and aims to raise €50 Million. The fund will invest in 35 promising start-ups and scale-ups with a high growth potential. Inventures II is unique because it focuses on businesses that positively impact the United Nations Sustainable Development Goals (SDGs).</p>
+      <p>Inventures II SDG Growth is a venture capital fund currently accepting new investments. The fund has raised almost €20 Million so far, and aims to raise up to €50 Million. The fund will invest in about 35 promising start-ups and scale-ups with a high growth potential. Inventures II is unique because it focuses on businesses that positively impact the United Nations Sustainable Development Goals (SDGs).</p>
     </div>
   </div>
 
