--- a/team-board.html
+++ b/team-board.html
@@ -17,11 +17,11 @@ description: Bio’s for our board and teammembers.
     <div class='col sm-col-6 px2'>
       <p>The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
 
-      <p>The Board of Directors of Inventures II is composed of the three managing team members plus Olivier de Duve, acting as managing partner. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee is an independent shareholders representative.</p>
+      <p>The Board of Directors of Inventures II is composed of the two managing team members plus Olivier de Duve, acting as managing partner. It is also composed of three other non Executive directors representing shareholders. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee  meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management. The Committee is composed of seven directors plus three other non director members.</p>
     </div>
 
     <div class='col sm-col-6 px2'>
-      <p>Alongside the Board and the Investment Committee, there is an Advisory Board. It acts as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It consists of three independent experts in sustainability and/or corporate governance matters.</p>
+      <p>Alongside the Board and the Investment Committee, there will be an Advisory Board. It will act as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It will consist of one team member specialised in this fiels and two independent experts in sustainability and/or corporate governance matters.</p>
     </div>
   </div>
 
@@ -40,7 +40,6 @@ description: Bio’s for our board and teammembers.
     <div class='sm-col sm-col-4 px2 py1 mb1'>
       <h3 class='h4'>Investors</h3>
       <ul>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Charles Adriaenssen</span></li>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Anne Prignon</span></li>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Xavier Peters</span></li>
       </ul>
@@ -90,7 +89,7 @@ description: Bio’s for our board and teammembers.
   <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Bruno de Radzitzky</h3>
-      <p itemprop='jobTitle'>Head of Asset Management</p>
+      <p itemprop='jobTitle'>Fund Manager and Senior Investment Manager</p>
       <img src='{{ site.url }}/assets/bruno.jpg' itemprop='image' width='189' height='189' alt='Bruno de Radzitzky'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
@@ -106,9 +105,8 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/ines.jpg' itemprop='image' width='189' height='189' alt='Inès Mertens'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>Inès has over eight years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
-        <p>In 2006, she moved to California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p>
-        <p>She holds a Master’s degree in business administration from the University of Louvain-la-Neuve (UCL). She has become a member of the National Association of Certified Valuation Analyst (NACVA) and received the designation of Accredited Valuation Analyst (AVA).</p>
+        <p>Inès has over ten years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
+        <p>She lived 6 years in California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p
       </div>
     </div>
   </div>
