--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -21,7 +21,7 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
     </div>
 
     <div class='col sm-col-6 px2'>
-      <p>Inventures I is a €15 Million fund that focuses on seed, early stage and growth businesses, and has selected 15 companies for investment. Active since 2012, the fund invested in businesses that focused on societal goals including: health, education, environment, well being. The fund is dedicated to early-stage businesses (40%) and growth-stage businesses (60%).</p>
+      <p>Inventures I is a €15 Million fund that focuses on seed, early stage and growth businesses, and has selected 15 companies for investment. Active since 2012, the fund invested in businesses that focused on societal goals including: health, education, environment, well being. The fund is dedicated to early-stage businesses (40%) and growth-stage businesses (60%). The current portfolio is composed of 13 companies.</p>
     </div>
   </div>
 
@@ -33,7 +33,7 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
     </div>
 
     <div class='col sm-col-6 px2'>
-      <p><strong>Co-financing with the crowd</strong> – The innovative feature of Inventures is that it includes citizens in a multi-stakeholder partnership, through the crowdfunding platform MyMicroInvest. The crowd reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
+      <p><strong>Co-financing with the crowd</strong> – The innovative feature of Inventures was that it includes citizens in a multi-stakeholder partnership, through the crowdfunding platform MyMicroInvest. The crowd reinforced the selection of companies, and increased the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
     </div>
   </div>
 
