--- a/get-funded.html
+++ b/get-funded.html
@@ -48,9 +48,10 @@ description: Inventures is the first European crowd-venturing impact fund lookin
 
     <div class='sm-col sm-col-6 px1'>
       <ul class='list-reset p2'>
-        <li>☑ I’m looking to raise funds before March 2018</li>
+        <li>☑ I’m looking to raise funds in the coming year</li>
         <li>☑ I’m looking for a total capital increase of minimum €250,000 and maximum €5,000,000</li>
-        <li>☑ My company is tackling one of three SDGs: education, health, or environment</li>
+        <li>☑ My company is tackling one of five SDGs</li>
+        <li>☑ My company will look for a co-investment from a crowdfunding platform</li>
         <li>☑ My company is is incorporated and is on the market</li>
       </ul>
     </div>
@@ -81,7 +82,7 @@ description: Inventures is the first European crowd-venturing impact fund lookin
   <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2'>
       <h3 class='mb2'>Why apply to Inventures?</h3>
-      <p>Our fund has the ability to share its strong expertise and large network with the companies matching the requirements. By joining our ranks, you will be able to receive the energy to reach your goals, the money to develop your company and the time to focus on your business. Together with our partner MyMicroInvest, we truly believe that supporting entrepreneurs and sharing their success is a key to a better and brighter future.</p>
+      <p>Our fund has the ability to share its strong expertise and large network with the companies matching the requirements. By joining our ranks, you will be able to receive the energy to reach your goals, the money to develop your company and the time to focus on your business. We truly believe that supporting entrepreneurs and sharing their success is a key to a better and brighter future.</p>
     </div>
 
     <div class='sm-col sm-col-6 px2'>
