--- a/team-board.html
+++ b/team-board.html
@@ -6,55 +6,11 @@ description: Bio’s for our board and teammembers.
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/mountains-clouds.jpg); background-size: cover'>
   <div class='container'>
-    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Board & Team</h1>
+    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Team & Board</h1>
   </div>
 </div>
 
 <div class='container px2'>
-  <h2>Board</h2>
-
-  <div class='clearfix mxn2'>
-    <div class='col sm-col-6 px2'>
-      <p>The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
-
-      <p>The Board of Directors of Inventures II is composed of the two managing team members plus Olivier de Duve, acting as managing partner. It is also composed of three other non Executive directors representing shareholders. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee  meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management. The Committee is composed of seven directors plus three other non director members.</p>
-    </div>
-
-    <div class='col sm-col-6 px2'>
-      <p>Alongside the Board and the Investment Committee, there will be an Advisory Board. It will act as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It will consist of one team member specialised in this fiels and two independent experts in sustainability and/or corporate governance matters.</p>
-    </div>
-  </div>
-
-  <p>The Investment Committee includes:</p>
-
-  <div class='clearfix mxn2 bg-athens-gray'>
-    <div class='sm-col sm-col-4 px2 py1 mb1'>
-      <h3 class='h4'>Funds management</h3>
-      <ul>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Olivier de Duve</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Bruno de Radzitzky</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Laurent Jouret</span></li>
-      </ul>
-    </div>
-
-    <div class='sm-col sm-col-4 px2 py1 mb1'>
-      <h3 class='h4'>Investors</h3>
-      <ul>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Anne Prignon</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Xavier Peters</span></li>
-      </ul>
-    </div>
-
-    <div class='sm-col sm-col-4 px2 py1 mb1'>
-      <h3 class='h4'>Other members</h3>
-      <ul>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Philippe Haspeslagh</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>John-Eric Bertrand</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Charles de Liedekerke</span></li>
-      </ul>
-    </div>
-  </div>
-
   <h2>Team</h2>
 
   <p>Inventures is composed of the following team:</p>
@@ -120,7 +76,7 @@ description: Bio’s for our board and teammembers.
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>Inès has over ten years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
-        <p>She lived 6 years in California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p
+        <p>She lived 6 years in California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p>
       </div>
     </div>
 
@@ -161,7 +117,6 @@ description: Bio’s for our board and teammembers.
     </div>
   </div>
 
-
   <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Sarah Kawa</h3>
@@ -172,6 +127,52 @@ description: Bio’s for our board and teammembers.
         <p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined Inventures in March 2015.</p>
         <p>She holds a Bachelor Degree in law from the Saint-Louis University and a Master’s Degree in economic law from the Université Libre de Bruxelles, with international experiences in Rome and Tel-Aviv. She always had a great interest in both entrepreneurial and financial world.</p>
       </div>
+    </div>
+  </div>
+
+  <hr class='mt3 mb3'/>
+
+  <h2>Board</h2>
+
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-6 px2'>
+      <p>The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
+
+      <p>The Board of Directors of Inventures II is composed of the two managing team members plus Olivier de Duve, acting as managing partner. It is also composed of three other non Executive directors representing shareholders. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee  meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management. The Committee is composed of seven directors plus three other non director members.</p>
+    </div>
+
+    <div class='col sm-col-6 px2'>
+      <p>Alongside the Board and the Investment Committee, there will be an Advisory Board. It will act as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It will consist of one team member specialised in this fiels and two independent experts in sustainability and/or corporate governance matters.</p>
+    </div>
+  </div>
+
+  <p>The Investment Committee includes:</p>
+
+  <div class='clearfix mxn2 bg-athens-gray'>
+    <div class='sm-col sm-col-4 px2 py1 mb1'>
+      <h3 class='h4'>Funds management</h3>
+      <ul>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Olivier de Duve</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Bruno de Radzitzky</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Laurent Jouret</span></li>
+      </ul>
+    </div>
+
+    <div class='sm-col sm-col-4 px2 py1 mb1'>
+      <h3 class='h4'>Investors</h3>
+      <ul>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Anne Prignon</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Xavier Peters</span></li>
+      </ul>
+    </div>
+
+    <div class='sm-col sm-col-4 px2 py1 mb1'>
+      <h3 class='h4'>Other members</h3>
+      <ul>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Philippe Haspeslagh</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>John-Eric Bertrand</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Charles de Liedekerke</span></li>
+      </ul>
     </div>
   </div>
 
