Remove 2 Observe & Fear Hunters from Inventures I
Uses flexbox to avoid grid items mis-alignment.

--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -102,83 +102,71 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
   <h2 class='col col-12'>Portfolio</h2>
 
   <div class='clearfix col col-12 mxn2'>
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/2houses.jpg' alt='2Houses logo'/>
-      <p><a href='https://www.2houses.com/'>2houses</a> is an online platform offering practical tools, content and advice for separated parents.</p>
-    </div>
+    <div class="flex flex-wrap">
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/2houses.jpg' alt='2Houses logo'/>
+        <p><a href='https://www.2houses.com/'>2houses</a> is an online platform offering practical tools, content and advice for separated parents.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/2observe.jpg' alt='2-Observe logo'/>
-      <p><a href='http://www.2-observe.be/'>2-Observe</a> designs, produces and sells medical monitoring systems for breathing.</p>
-    </div>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/acarup.jpg' alt='2Acar’Up logo'/>
+        <p><a href='http://acarup.com/'>Acar’Up</a> developed a new method to eradicate house dust mites, a product which attracts mites and a technical textile which traps the allergenic dust mites.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/acarup.jpg' alt='2Acar’Up logo'/>
-      <p><a href='http://acarup.com/'>Acar’Up</a> developed a new method to eradicate house dust mites, a product which attracts mites and a technical textile which traps the allergenic dust mites.</p>
-    </div>
-  </div>
-  <div class='clearfix col col-12 mxn2'>
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/aproplan.jpg' alt='AproPLAN logo'/>
-      <p><a href='http://www.aproplan.com/'>AproPLAN</a> is construction management software that lets you keep track of your progress & collaborate with your team. Get work done in the office and on-site.</p>
-    </div>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/aproplan.jpg' alt='AproPLAN logo'/>
+        <p><a href='http://www.aproplan.com/'>AproPLAN</a> is construction management software that lets you keep track of your progress & collaborate with your team. Get work done in the office and on-site.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/auctelia.jpg' alt='Auctelia logo'/>
-      <p><a href='https://www.auctelia.com/'>Auctelia</a> is an efficient way to buy and sell used machines and industrial equipment (timber, metal, etc) online through auctions and direct sales.</p>
-    </div>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/auctelia.jpg' alt='Auctelia logo'/>
+        <p><a href='https://www.auctelia.com/'>Auctelia</a> is an efficient way to buy and sell used machines and industrial equipment (timber, metal, etc) online through auctions and direct sales.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/domobios.jpg' alt='Domobios logo'/>
-      <p><a href='http://www.domobios.com/'>Domobios</a> is specialized in the research and development of sustainable and non-toxic products that eliminate household pests such as mites, bedbugs, lice, fleas, and cockroaches.</p>
-    </div>
-  </div>
-  <div class='clearfix col col-12 mxn2'>
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/domoscio.jpg' alt='Domoscio logo'/>
-      <p><a href='https://domoscio.com/'>Domoscio</a> creates adaptive e-learning for better learning and retention by linking cognitive science, big data and artificial intelligence together.</p>
-    </div>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/domobios.jpg' alt='Domobios logo'/>
+        <p><a href='http://www.domobios.com/'>Domobios</a> is specialized in the research and development of sustainable and non-toxic products that eliminate household pests such as mites, bedbugs, lice, fleas, and cockroaches.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/elysia.jpg' alt='Elysia logo'/>
-      <p><a href='http://www.elysia.be/'>Elysia</a> provides laboratory information management systems (LIMS), chromatography and quality control systems to the pharmaceutical, agrochemical and nuclear/PET industries. Elysia designs, manufactures, sells and services measurement instruments.</p>
-    </div>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/domoscio.jpg' alt='Domoscio logo'/>
+        <p><a href='https://domoscio.com/'>Domoscio</a> creates adaptive e-learning for better learning and retention by linking cognitive science, big data and artificial intelligence together.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/fearhunters.jpg' alt='Fear Hunters logo'/>
-      <p><a href='http://www.koorachoo.com/'>Fear Hunters</a> (aka KooraChoo + AromaKids) is a solution for parents and children to help them manage their emotions with a plush toy book and essential oil spray.</p>
-    </div>
-  </div>
-  <div class='clearfix col col-12 mxn2'>
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/oncodna.jpg' alt='OncoDNA logo'/>
-      <p><a href='http://www.oncodna.com/'>OncoDNA</a> is a medical diagnosis company with experience in DNA sequencing and diagnostic analyses in oncology.</p>
-    </div>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/elysia.jpg' alt='Elysia logo'/>
+        <p><a href='http://www.elysia.be/'>Elysia</a> provides laboratory information management systems (LIMS), chromatography and quality control systems to the pharmaceutical, agrochemical and nuclear/PET industries. Elysia designs, manufactures, sells and services measurement instruments.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/opinum.jpg' alt='Opinum logo'/>
-      <p><a href='https://opinum.com/'>Opinum</a> ias an energy monitoring platform for buildings.</p>
-    </div>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/oncodna.jpg' alt='OncoDNA logo'/>
+        <p><a href='http://www.oncodna.com/'>OncoDNA</a> is a medical diagnosis company with experience in DNA sequencing and diagnostic analyses in oncology.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/santech.jpg' alt='Santech logo'/>
-      <p><a href='https://www.santech.fr/'>Santech</a> specialises in the development and commercialisation in B2B2C sector of a customisable medical platform, specialised in prevention and support.</p>
-    </div>
-  </div>
-  <div class='clearfix col col-12 mxn2'>
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/ssx.jpg' alt='Social Stock Exchange logo'/>
-      <p><a href='http://www.socialstockexchange.com/'>Social Stock Exchange</a> is a fully regulated market place designed to improve access to capital for social impact businesses by connecting them with impact investors.</p>
-    </div>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/opinum.jpg' alt='Opinum logo'/>
+        <p><a href='https://opinum.com/'>Opinum</a> ias an energy monitoring platform for buildings.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/youscribe.jpg' alt='YouScribe logo'/>
-      <p><a href='https://www.youscribe.com/'>YouScribe</a> is an online platform for selling digital books.</p>
-    </div>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/santech.jpg' alt='Santech logo'/>
+        <p><a href='https://www.santech.fr/'>Santech</a> specialises in the development and commercialisation in B2B2C sector of a customisable medical platform, specialised in prevention and support.</p>
+      </div>
 
-    <div class='sm-col sm-col-4 px2'>
-      <img src='/assets/zencar.jpg' alt='ZenCar logo'/>
-      <p><a href='https://www.zencar.eu/'>Zen Car</a> is a Belgian car sharing service of 100% electric vehicle fleet with dedicated charging stations.</p>
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/ssx.jpg' alt='Social Stock Exchange logo'/>
+        <p><a href='http://www.socialstockexchange.com/'>Social Stock Exchange</a> is a fully regulated market place designed to improve access to capital for social impact businesses by connecting them with impact investors.</p>
+      </div>
+
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/youscribe.jpg' alt='YouScribe logo'/>
+        <p><a href='https://www.youscribe.com/'>YouScribe</a> is an online platform for selling digital books.</p>
+      </div>
+
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/zencar.jpg' alt='ZenCar logo'/>
+        <p><a href='https://www.zencar.eu/'>Zen Car</a> is a Belgian car sharing service of 100% electric vehicle fleet with dedicated charging stations.</p>
+      </div>
     </div>
   </div>
 
