Replace investment process image for both funds

--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -34,7 +34,7 @@ description: "Our new fund, Inventures II, open for investors."
   </div>
 
   <div class='col col-12 center mt2 mb2'>
-    <img src='/assets/sustainable-development-goals.jpg' alt='Inventures II logo'/>
+    <img src='/assets/investment-process.jpg' alt='Investment process'/>
   </div>
 
   <div class='clearfix mxn2'>
