Add Shiftmeapp to Inventures II portfolio

--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -65,12 +65,19 @@ description: "Our new fund, Inventures II, open for investors."
     </div>
   </div>
 
-
   <h2>Portfolio</h2>
 
-  <p class='italic center'>To come&hellip;</p>
+  <div class='clearfix col col-12 mxn2'>
+    <div class="flex flex-wrap">
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/shiftmeapp.jpg' alt='Shiftmeapp logo'/>
+        <p><a href='https://www.shiftmeapp.com/'>Shiftmeapp</a> is an intelligent planning and online team management solution.</p>
+      </div>
+    </div>
+  </div>
 
-  <hr class='mt3 mb3'/>
-
-  <p class='center'>Intrerested? Find out the <a href='/invest/'>benefits for investors</a> and get in touch with our team.</p>
+  <div class='clearfix col col-12'>
+    <hr class='clearfix mt3 mb3'/>
+    <p class='center'>Intrerested? Find out the <a href='/invest/'>benefits for investors</a> and get in touch with our team.</p>
+  </div>
 </div>
