Update Laurent's bio

--- a/team-board.html
+++ b/team-board.html
@@ -35,9 +35,9 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/laurent.jpg' itemprop='image' width='189' height='189' alt='Laurent Jouret'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>Laurent has been part of the Inventures family since October 2017.</p>
-        <p>After working in finance for several Belgian and foreign banks, Laurent spent 10 years working for Sofina, an investment holding company where he had the chance to work on direct investment opportunities and to manage a global portfolio for Private Equity funds in Luxembourg.</p>
-        <p>Laurent holds a Master’s degree in Business Engineering from the Louvain School of Management.</p>
+        <p>Prior to joining MMI, Laurent was Senior Investment Manager at Sofina.</p>
+        <p>He was a member of the internal committee overseeing the direct investment opportunities and has represented Sofina as a non-executive director in portfolio companies.</p>
+        <p>He previously held various positions at leading financial institutions such as ING and Citibank.</p>
       </div>
     </div>
   </div>
