Replace MyMicroInvest by Spreds

--- a/get-funded.html
+++ b/get-funded.html
@@ -20,7 +20,7 @@ description: Inventures is the first European crowd-venturing impact fund lookin
     </div>
 
     <div class='sm-col sm-col-6 px2'>
-      <p><strong>Inventures is working in partnership with <a href='https://www.mymicroinvest.com/'>MyMicroInvest</a></strong>, a leading investment platform, on various projects reflecting its vision and mission.</p>
+      <p><strong>Inventures is working in partnership with <a href='https://www.spreds.com/'>Spreds</a></strong>, a leading investment platform, on various projects reflecting its vision and mission.</p>
       <p>We are passionate about helping young companies grow, prosper and succeed, If you're looking for growth capital for your impactful business, Inventures invest from <strong>250,000 and up to €1,000,000 in disruptive start-ups and scale-ups</strong>.<p>
     </div>
   </div>
