--- a/team-board.html
+++ b/team-board.html
@@ -62,7 +62,7 @@ description: Bio’s for our board and teammembers.
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>Alex is expert in sustainable finance. He started his career as attorney at law in Belgium and France. He then moved to the financial sector, with 17 years experience in financing SME’s, amongst other as global head of international operations & trade finance (BNP Paribas Fortis). He developed the sustainable finance strategy for BNP Paribas Fortis, developing a € 5 billion portfolio of SRI funds, Green and Social Bonds, ESG and impact investing.</p>
-        <p>Alex Joined MyMicroInvest in 2016 as expert in Sustainable Finance to structure Inventures 2 and chairs the advisory board as Chief Sustainability Officer.</p>
+        <p>Alex Joined Spreds in 2016 as expert in Sustainable Finance to structure Inventures 2 and chairs the advisory board as Chief Sustainability Officer.</p>
         <p>Alex holds a Master’s Degree in Laws (Louvain-la-Neuve), a post degree in ITC management (Namur). He is lecturer in Sustainable Finance at ICHEC Business School and has a seat in the board a several companies and NGO’s.</p>
       </div>
     </div>
