--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -17,7 +17,7 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
 
   <div class='clearfix mxn2'>
     <div class='col sm-col-6 px2'>
-      <p>The fund Inventures was founded in 2011 by Olivier de Duve, who worked in venture capital in Europe and the US. He was working and living abroad and became concerned with youth employment, especially when considering his children’s future. For the next generation to have good jobs in Europe, investment in small companies is crucial. Together with several friends and former colleagues, he founded Inventures and MyMicroInvest to tackle this problem.</p>
+      <p>The fund Inventures was founded in 2011 by Olivier de Duve, who worked in venture capital in Europe and the US. He was working and living abroad and became concerned with youth employment, especially when considering his children’s future. For the next generation to have good jobs in Europe, investment in small companies is crucial. Together with several friends and former colleagues, he founded Inventures and Spreds to tackle this problem.</p>
     </div>
 
     <div class='col sm-col-6 px2'>
@@ -33,7 +33,7 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
     </div>
 
     <div class='col sm-col-6 px2'>
-      <p><strong>Co-financing with the crowd</strong> – The innovative feature of Inventures was that it includes citizens in a multi-stakeholder partnership, through the crowdfunding platform MyMicroInvest. The crowd reinforced the selection of companies, and increased the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
+      <p><strong>Co-financing with the crowd</strong> – The innovative feature of Inventures was that it includes citizens in a multi-stakeholder partnership, through the crowdfunding platform Spreds. The crowd reinforced the selection of companies, and increased the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
     </div>
   </div>
 
