--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
   <div class='col sm-col-7 mt3'>
     <h3>What is Inventures</h3>
 
-    <p>Inventures is a European venture capital fund that builds a better world through a portfolio of investments in sustainable businesses.</p>
+    <p>Inventures is a European venture capital fund that builds a better world  by investing in fast growing companies and sustainable businesses led by ambitious and visionary founders.</p>
 
     <p>The firm has two funds: <a href='venture-capital-funds/inventures-i/'>Inventures I</a> & <a href='venture-capital-funds/inventures-ii/'>Inventures II</a>.</p>
 
     <h3>History in brief</h3>
 
-    <p>Inventures was created to support <strong>early stage smart and innovative European businesses</strong>, to support <strong>sustainable job growth</strong> and <strong>empower entrepreneurs</strong>. Inventures empowers citizenship co-investments through a crowdfunding platform, MyMicroInvest.</p>
+    <p>Inventures was created to support <strong>early stage smart and innovative European businesses</strong>, to support <strong>sustainable job growth</strong> and <strong>empower entrepreneurs</strong>. Inventures has empowered citizenship co-investment through its partnership with the investment platform <a href='https://www.spreds.com/'>Spreds</a>.</p>
   </div>
 
   <div class='col sm-col-5'>
@@ -40,11 +40,11 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
     <div class='col sm-col-6 px2'>
       <p>Inventures is open to invest in European impact businesses: larger amounts in confirmed scale-ups (50%), and smaller amounts in a number of start-ups (20%) with reinvestment in follow-up rounds (30%).</p>
 
-      <p>Inventures II always requests a seat in the board of directors of each business in its portfolio.</p>
+      <p>Inventures II always requests a seat on the board of directors of each business in its portfolio.</p>
     </div>
 
     <div class='col sm-col-6 px2 mb3'>
-      <p>Both Inventures I & II empower citizens and help to democratize venture capital by offering co-investment on a crowdfunding platform, MyMicroInvest.</p>
+      <p>Both Inventures I & II empower citizens and help to democratise venture capital by offering co-investment for selected campaigns featured on the investment platform, <a href='https://www.spreds.com/'>Spreds</a>.</p>
 
       <p>Including citizens in a multi-stakeholder partnership reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values.</p>
     </div>
@@ -66,23 +66,23 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
         <img src='/assets/inventures2.svg' width='250' alt='Inventures II'/>
       </div>
 
-      <p>Inventures II SDG Growth is a venture capital fund currently accepting new investment. The fund has raised €15 Million so far, and aims to raise €50 Million. The fund will invest in 35 promising start-ups and scale-ups with a high growth potential. Inventures II is unique because it focuses on businesses that positively impact the United Nations Sustainable Development Goals (SDGs).</p>
+      <p>Inventures II SDG Growth is a venture capital fund currently accepting new investments. The fund has raised almost €20 Million so far, and aims to raise up to €50 Million. The fund will invest in about 35 promising start-ups and scale-ups with a high growth potential. Inventures II is unique because it focuses on businesses that positively impact the United Nations Sustainable Development Goals (SDGs).</p>
     </div>
   </div>
 
   <div class='col col-12'>
     <h3>Co-investing with crowdfunding</h3>
 
-    <p>Inventures is unique because it is coupled with crowdfunding, to gauge the market for each business by testing it with co-investment.</p>
+    <p>Inventures is unique because when coupled with crowdfunding, the market is gauged for each business by testing it with co-investment.</p>
 
     <div class='clearfix mxn2'>
       <p class='col sm-col-6 px2'>Crowdfunding is a collective investment in a business or product. Equity crowdfunding allows the public to participate in venture capital by purchasing Notes for small amounts (currently €100), which when added together in our experience, can reach a larger amount of €50,000 – €4 Million.</p>
 
-      <p class='col sm-col-6 px2'>Our team believes convincing the crowd to invest with crowdfunding will prove a market potential or fit. Crowdfunding helps a business to build a community of ambassadors, and generate positive marketing effects. Further, an early go-to-market experience is better than a late project crash, after years of investment and reinvestment.</p>
+      <p class='col sm-col-6 px2'>Our team believes convincing the crowd to invest through crowdfunding will prove a market potential or fit. Crowdfunding helps a business build a community of ambassadors, and generate positive marketing effects. Further, an early go-to-market experience is better than a late project crash, after years of investment and reinvestment.</p>
     </div>
   </div>
 
-  <p class='col col-12 center py3'>Read more about crowdfunding on our platform: <a href='https://www.mymicroinvest.com/' title='Investment crowdfunding together with professionals'>MyMicroInvest</a></p>
+  <p class='col col-12 center py3'>Read more about our partner <a href='https://www.spreds.com/' title='Investment crowdfunding together with professionals'>Spreds</a></p>
 
   <div class='clearfix mxn2'>
     <div class='col sm-col-6 px2'>
@@ -102,7 +102,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
       <h3 class='center regular py1'>Entrepreneur</h3>
 
-      <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund and also conducting a crowdfunding campaign? Please fill in an application to raise funds on <a href='https://www.mymicroinvest.com/' title='Investment crowdfunding together with professionals'>MyMicroInvest</a> or send us a message to know more.</p>
+      <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund ? Then contact us directly at (email address).
 
       <a href='/get-funded' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TO RAISE FUNDS</a>
     </div>
