--- a/invest.html
+++ b/invest.html
@@ -15,9 +15,8 @@ description: Inventures is the first European crowd-venturing impact fund and we
     <div class='sm-col sm-col-6 px2'>
       <h3>Invest with Inventures</h3>
 
-      <p>The Inventures II fund is currently open for investment with a commitment deadline set to 31 December 2017.</p>
-
-      <p>If you are willing to invest a minimum of  €100,000 to support businesses that follow the UN SDGs, please contact us and we’ll arrange a meeting.</p>
+      <p>The Inventures II fund is currently open for investment with a commitment deadline set to 31 December 2018.</p>
+      <p>If you are willing to invest a minimum of  €100,000 to support businesses that follow the UN SDGs, please <a href='mailto:info@inventures.fund'>contact us</a> and we’ll arrange a meeting.</p>
     </div>
 
     <div class='sm-col sm-col-6 px2'>
