--- a/team-board.html
+++ b/team-board.html
@@ -6,59 +6,14 @@ description: Bio’s for our board and teammembers.
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/mountains-clouds.jpg); background-size: cover'>
   <div class='container'>
-    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Board & Team</h1>
+    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Team & Board</h1>
   </div>
 </div>
 
 <div class='container px2'>
-  <h2>Board</h2>
-
-  <div class='clearfix mxn2'>
-    <div class='col sm-col-6 px2'>
-      <p>Inventures is managed by MyMicroInvest S.A.. The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
-
-      <p>The Board of Directors of Inventures II is composed of the three managing team members plus MyMicroInvest, acting as managing director. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee is composed of seven directors, plus three other members. The Investment Committee is an independent shareholders representative.</p>
-    </div>
-
-    <div class='col sm-col-6 px2'>
-      <p>Alongside the Board and the Investment Committee, there is an Advisory Board. It acts as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It consists of one MyMicroInvest team member and two independent experts in sustainability and/or corporate governance matters.</p>
-    </div>
-  </div>
-
-  <p>The Investment Committee includes:</p>
-
-  <div class='clearfix mxn2 bg-athens-gray'>
-    <div class='sm-col sm-col-4 px2 py1 mb1'>
-      <h3 class='h4'>Funds management</h3>
-      <ul>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Olivier de Duve</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Bruno de Radzitzky</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Inès Mertens</span></li>
-      </ul>
-    </div>
-
-    <div class='sm-col sm-col-4 px2 py1 mb1'>
-      <h3 class='h4'>Investors</h3>
-      <ul>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Charles Adriaenssen</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Anne Prignon</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Xavier Peters</span></li>
-      </ul>
-    </div>
-
-    <div class='sm-col sm-col-4 px2 py1 mb1'>
-      <h3 class='h4'>Other members</h3>
-      <ul>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Philippe Haspeslagh</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>John-Eric Bertrand</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Charles de Liedekerke</span></li>
-      </ul>
-    </div>
-  </div>
-
   <h2>Team</h2>
 
-  <p>Inventures is managed by MyMicroInvest S.A., which is composed of the following team:</p>
+  <p>Inventures is composed of the following team:</p>
 
   <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
@@ -80,9 +35,9 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/laurent.jpg' itemprop='image' width='189' height='189' alt='Laurent Jouret'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>Laurent has been part of the Inventures family since October 2017.</p>
-        <p>After working in finance for several Belgian and foreign banks, Laurent spent 10 years working for Sofina, an investment holding company where he had the chance to work on direct investment opportunities and to manage a global portfolio for Private Equity funds in Luxembourg.</p>
-        <p>Laurent holds a Master’s degree in Business Engineering from the Louvain School of Management.</p>
+        <p>Prior to joining MMI, Laurent was Senior Investment Manager at Sofina.</p>
+        <p>He was a member of the internal committee overseeing the direct investment opportunities and has represented Sofina as a non-executive director in portfolio companies.</p>
+        <p>He previously held various positions at leading financial institutions such as ING and Citibank.</p>
       </div>
     </div>
   </div>
@@ -90,11 +45,11 @@ description: Bio’s for our board and teammembers.
   <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Bruno de Radzitzky</h3>
-      <p itemprop='jobTitle'>Head of Asset Management</p>
+      <p itemprop='jobTitle'>Fund Manager and Senior Investment Manager</p>
       <img src='{{ site.url }}/assets/bruno.jpg' itemprop='image' width='189' height='189' alt='Bruno de Radzitzky'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of Asset Management.</p>
+        <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined Inventures on January 1st 2017 as Head of Asset Management.</p>
         <p>He served as a director of several Etex companies in Belgium, Luxembourg, France and Spain. He also was a board member and the Compliance Officer of the Etex Pension Fund.</p>
         <p>Bruno holds a Master’s Degree in Laws (Louvain-la-Neuve), a post degree in International and European Laws (VUB) and a LLM (Queen Mary & Westfield College).</p>
       </div>
@@ -107,7 +62,7 @@ description: Bio’s for our board and teammembers.
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>Alex is expert in sustainable finance. He started his career as attorney at law in Belgium and France. He then moved to the financial sector, with 17 years experience in financing SME’s, amongst other as global head of international operations & trade finance (BNP Paribas Fortis). He developed the sustainable finance strategy for BNP Paribas Fortis, developing a € 5 billion portfolio of SRI funds, Green and Social Bonds, ESG and impact investing.</p>
-        <p>Alex Joined MyMicroInvest in 2016 as expert in Sustainable Finance to structure Inventures 2 and chairs the advisory board as Chief Sustainability Officer.</p>
+        <p>Alex Joined Spreds in 2016 as expert in Sustainable Finance to structure Inventures 2 and chairs the advisory board as Chief Sustainability Officer.</p>
         <p>Alex holds a Master’s Degree in Laws (Louvain-la-Neuve), a post degree in ITC management (Namur). He is lecturer in Sustainable Finance at ICHEC Business School and has a seat in the board a several companies and NGO’s.</p>
       </div>
     </div>
@@ -120,34 +75,33 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/ines.jpg' itemprop='image' width='189' height='189' alt='Inès Mertens'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>Inès has over eight years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
-        <p>In 2006, she moved to California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p>
-        <p>She holds a Master’s degree in business administration from the University of Louvain-la-Neuve (UCL). She has become a member of the National Association of Certified Valuation Analyst (NACVA) and received the designation of Accredited Valuation Analyst (AVA).</p>
+        <p>Inès has over ten years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
+        <p>She lived 6 years in California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p>
       </div>
     </div>
 
-    <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
-      <h3 itemprop='name'>Philippine du Parc Locmaria</h3>
-      <p itemprop='jobTitle'>Investment Analyst</p>
-      <img src='{{ site.url }}/assets/philippine.jpg' itemprop='image' width='189' height='189'  alt='Philippine du Parc Locmaria'/>
-      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
-      <div itemprop='description'>
-        <p>Philippine joined MyMicroInvest in 2016 as an Investment Analyst after completing two internships; as a Junior Investment Analyst at GBL in Brussels and in Mergers and Acquisitions at HSBC in Paris. After different work experiences in a Belgian SMO, Philippine decided to go into the exciting world of entrepreneurship.</p>
-        <p>Philippine studied in Belgium and China. She post-graduated Magna Cum Laude from Business Engineering at Louvain School of Management (Finance and Management major).</p>
-      </div>
-    </div>
-  </div>
-
-  <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Peter De Decker</h3>
       <p itemprop='jobTitle'>Investment Analyst</p>
       <img src='{{ site.url }}/assets/peter.jpg' itemprop='image' width='189' height='189'  alt='Peter De Decker'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined MyMicroInvest in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
+        <p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined Inventures in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
         Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU Leuven, with an international experience in Siena (Italy) as an exchange student.</p>
         <p>Peter passed all three <abbr title='Chartered Financial Analyst'>CFA</abbr> exams.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class='clearfix mxn2'>
+    <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
+      <h3 itemprop='name'>Philippine du Parc Locmaria</h3>
+      <p itemprop='jobTitle'>Investment Analyst</p>
+      <img src='{{ site.url }}/assets/philippine.jpg' itemprop='image' width='189' height='189'  alt='Philippine du Parc Locmaria'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
+      <div itemprop='description'>
+        <p>Philippine joined Inventures in 2016 as an Investment Analyst after completing two internships; as a Junior Investment Analyst at GBL in Brussels and in Mergers and Acquisitions at HSBC in Paris. After different work experiences in a Belgian SMO, Philippine decided to go into the exciting world of entrepreneurship.</p>
+        <p>Philippine studied in Belgium and China. She post-graduated Magna Cum Laude from Business Engineering at Louvain School of Management (Finance and Management major).</p>
       </div>
     </div>
 
@@ -157,12 +111,11 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/brice.jpg' itemprop='image' width='189' height='189'  alt='Brice Moureau'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>After working as a management consultant in the Energy sector for one year, Brice joined MyMicroInvest in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
+        <p>After working as a management consultant in the Energy sector for one year, Brice joined Inventures in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
         <p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech <abbr title='Venture Capital'>VC</abbr> fund.</p>
       </div>
     </div>
   </div>
-
 
   <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
@@ -171,7 +124,7 @@ description: Bio’s for our board and teammembers.
       <img src='{{ site.url }}/assets/sarah.jpg' itemprop='image' width='189' height='189'  alt='Sarah Kawa'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined MyMicroInvest in March 2015.</p>
+        <p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined Inventures in March 2015.</p>
         <p>She holds a Bachelor Degree in law from the Saint-Louis University and a Master’s Degree in economic law from the Université Libre de Bruxelles, with international experiences in Rome and Tel-Aviv. She always had a great interest in both entrepreneurial and financial world.</p>
       </div>
     </div>
@@ -179,7 +132,53 @@ description: Bio’s for our board and teammembers.
 
   <hr class='mt3 mb3'/>
 
+  <h2>Board</h2>
+
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-6 px2'>
+      <p>The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
+
+      <p>The Board of Directors of Inventures II is composed of the two managing team members plus Olivier de Duve, acting as managing partner. It is also composed of three other non Executive directors representing shareholders. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee  meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management. The Committee is composed of seven directors plus three other non director members.</p>
+    </div>
+
+    <div class='col sm-col-6 px2'>
+      <p>Alongside the Board and the Investment Committee, there will be an Advisory Board. It will act as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It will consist of one team member specialised in this fiels and two independent experts in sustainability and/or corporate governance matters.</p>
+    </div>
+  </div>
+
+  <p>The Investment Committee includes:</p>
+
+  <div class='clearfix mxn2 bg-athens-gray'>
+    <div class='sm-col sm-col-4 px2 py1 mb1'>
+      <h3 class='h4'>Funds management</h3>
+      <ul>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Olivier de Duve</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Bruno de Radzitzky</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Laurent Jouret</span></li>
+      </ul>
+    </div>
+
+    <div class='sm-col sm-col-4 px2 py1 mb1'>
+      <h3 class='h4'>Investors</h3>
+      <ul>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Anne Prignon</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Xavier Peters</span></li>
+      </ul>
+    </div>
+
+    <div class='sm-col sm-col-4 px2 py1 mb1'>
+      <h3 class='h4'>Other members</h3>
+      <ul>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Philippe Haspeslagh</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>John-Eric Bertrand</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Charles de Liedekerke</span></li>
+      </ul>
+    </div>
+  </div>
+
+  <hr class='mt3 mb3'/>
+
   <div class='col col-12 center'>
-    <p>Feel free to contact our team if you have any questions. You can call us at <a href='tel:{{ site.phone }}'>{{ site.phone }}</a>, Monday to Friday, 9am-6pm, or contact us via <a href='mailto:{{ site.email }}' title='Get in touch'>mail</a>.</p>
+    <p>Feel free to contact our team if you have any questions. Monday to Friday, 9am-6pm, via <a href='mailto:{{ site.email }}' title='Get in touch'>mail</a>.</p>
   </div>
 </div>
