--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -34,13 +34,13 @@ description: "Our new fund, Inventures II, open for investors."
   </div>
 
   <div class='col col-12 center mt2 mb2'>
-    <img src='/assets/sustainable-development-goals.jpg' alt='Inventures II logo'/>
+    <img src='/assets/investment-process.jpg' alt='Investment process'/>
   </div>
 
   <div class='clearfix mxn2'>
     <div class='col sm-col-6 px2'>
       <h2 class='h3 regular'>Objectives</h2>
-      <p>Inventures II SDG Growth aims to invest in <strong>35 promising start-ups and scale-ups with a high growth potential</strong>.</p>
+      <p>Inventures II SDG Growth aims to invest in about <strong>35 promising start-ups and scale-ups with a high growth potential</strong>.</p>
 
       <p>These investments will result in a measurable impact on the SDGs, and lead to the creation of <strong>350 jobs in Europe</strong>, as well as a market-aligned financial result.</p>
 
@@ -57,7 +57,7 @@ description: "Our new fund, Inventures II, open for investors."
     <div class='col sm-col-6 px2'>
       <h2 class='h3 regular'>Co-financing with the crowd</h2>
 
-      <p>The innovative feature of Inventures is that it includes citizen in a multi-stakeholder partnership through the crowdfunding platform MyMicroInvest. The crowd reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
+      <p>The innovative feature of Inventures is that it includes citizen in a multi-stakeholder partnership through crowdfunding platforms. The crowd reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
 
       <p>Inventures II SDG Growth is open for qualified investors.</p>
 
@@ -65,12 +65,19 @@ description: "Our new fund, Inventures II, open for investors."
     </div>
   </div>
 
-
   <h2>Portfolio</h2>
 
-  <p class='italic center'>To come&hellip;</p>
+  <div class='clearfix col col-12 mxn2'>
+    <div class="flex flex-wrap">
+      <div class='sm-col sm-col-4 px2'>
+        <img src='/assets/shiftmeapp.jpg' alt='Shiftmeapp logo'/>
+        <p><a href='https://www.shiftmeapp.com/'>Shiftmeapp</a> is an intelligent planning and online team management solution.</p>
+      </div>
+    </div>
+  </div>
 
-  <hr class='mt3 mb3'/>
-
-  <p class='center'>Intrerested? Find out the <a href='/invest/'>benefits for investors</a> and get in touch with our team.</p>
+  <div class='clearfix col col-12'>
+    <hr class='clearfix mt3 mb3'/>
+    <p class='center'>Intrerested? Find out the <a href='/invest/'>benefits for investors</a> and get in touch with our team.</p>
+  </div>
 </div>
